--- a/steps/step3/web.xml
+++ b/steps/step3/web.xml
@@ -9,7 +9,7 @@
   <display-name>Archetype Created Web Application</display-name>
 
   <welcome-file-list>
-      <welcome-file>index</welcome-file>
+      <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 
   <resource-ref>
